--- a/README.Rmd
+++ b/README.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Citation
 
-Robertson, M.D. 2025. Impact of starvation-induced mortality on the collapse and lack of recovery of American plaice on the Newfoundland Grand Banks: Zenodo code release. DOI.
+Robertson, M.D. 2025. Impact of starvation-induced mortality on the collapse and lack of recovery of American plaice on the Newfoundland Grand Banks: Zenodo code release. https://doi.org/10.5281/zenodo.14872897.
 
 # Contact
 
